@@ -1,2 +1,19 @@
 # ElectronicVotingMachine
 Electronic voting machines (EVMs) are used to conduct elections in most of the countries. Done using Java and JavaFx
+
+
+## Demo
+
+
+
+## How to Run
+- Open the project in the eclipse 
+- Add the Javafx jars in the build path 
+- Add ojdbc jar in the build path 
+- Make sure you have installed the oracle in your system
+- Add VM arguments in the main class
+```
+--module-path "J:\javafx-sdk-17.0.1\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml
+```
+## Contributions
+Contributions are welcome! If you find a bug or have a suggestion, please open an issue or submit a pull request.
